helm_values/ingress-routes/boutique-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: boutique
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`boutique.glitcher.ddnsfree.com`)
      kind: Rule
      services:
        - name: frontend
          port: 80
  # tls:
  #   certResolver: letsencrypt
